--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(formatd)
 export(hello_world)
 export(r_format_cdate)
 export(r_format_date)
+export(standardise_strings)
 useDynLib(rust.fun, .registration = TRUE)
