--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -14,7 +14,8 @@ text_distance = "0.5.0"
 rayon = "1.8"
 regex = "*"
 walkdir  = "*"
-geo = "*"
+rand = "*"
 geojson = "*"
 rstar = "*"
 serde_json = "1.0"  # Use the latest version
+geo = "*"
